# wifi_aware_investigation

./: .gitignore  LICENSE  README.md  commitlint.config.js
.github/: copilot-instructions.md
.github/prompts/: commit_and_push.prompt.md
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/gopro/wifiaware/ui/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
docs/: android-setup.md  architecture.md  ios-setup.md  rpi-setup.md
ios/: README.md
ios/WiFiAwareApp/: Info.plist  WIFIAwareCapabilityCheck.swift  WiFiAwareApp.entitlements
ios/WiFiAwareApp/App/: ContentView.swift  WiFiAwareAppApp.swift
ios/WiFiAwareApp/WiFiAwareApp/: ContentView.swift  WIFIAwareCapabilityCheck.swift  WiFiAwareAppApp.swift
ios/WiFiAwareApp/WiFiAwareApp.xcodeproj/: project.pbxproj
ios/WiFiAwareApp/WiFiAwareAppTests/: WiFiAwareAppTests.swift
ios/WiFiAwareApp/WiFiAwareAppUITests/: WiFiAwareAppUITests.swift  WiFiAwareAppUITestsLaunchTests.swift
rpi/: README.md  main.py  pyproject.toml  requirements.txt
rpi/config/: settings.yaml
rpi/scripts/: check_nan_support.py  start_service.sh
rpi/src/: __init__.py
